# scraper

./: Dockerfile  pyproject.toml
scraper/: __main__.py
scraper/etl/: scraper.py
